# quant-project

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml  data_source.yaml  evaluation.yaml  factor.yaml
scripts/: compute_factors.py  evaluate_factor.py  factor_report.py  init_sample_data.py  pool.py  run_streamlit.py  update_daily_data.py
src/qflab/: __init__.py
src/qflab/api/: __init__.py  main.py  schemas.py
src/qflab/data/: __init__.py  akshare_provider.py  base.py  calendar.py  normalizer.py  storage.py  tushare_provider.py
src/qflab/evaluation/: __init__.py  correlation.py  decay.py  filters.py  ic.py  portfolio.py  quantile.py  report.py  splits.py  turnover.py
src/qflab/factors/: __init__.py  base.py  market_cap_factors.py  price_factors.py  registry.py  volatility_factors.py  volume_factors.py
src/qflab/labels/: __init__.py  forward_returns.py
src/qflab/pool/: __init__.py  models.py  registry.py  store.py
src/qflab/preprocess/: __init__.py  neutralize.py  standardize.py  winsorize.py
src/qflab/ui/: streamlit_app.py
src/qflab/utils/: __init__.py  config.py  dates.py  logger.py
src/qflab/visualization/: __init__.py  plots.py
tests/: conftest.py  test_correlation.py  test_decay.py  test_discipline.py  test_forward_returns.py  test_ic.py  test_neutralize.py  test_pool.py  test_quantile.py  test_splits.py  test_storage_raw.py  test_tushare_provider.py
